# scrubb

./: .clang-format  .clangd  CMakeLists.txt  README.md  compile_commands.json  format.sh  rebuild.sh
src/: CommandHistory.h  MainWindow.cpp  MainWindow.h  TextureAtlas.h  TextureManager.cpp  TextureManager.h  TileArray.cpp  TileArray.h  main.cpp
